--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lyon-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lyondeveloper.github.io/my-website/",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
